// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pull-request-merged-handler creates an issue 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @JasonEtco.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`pull-request-merged-handler creates an issue and assigns the configured user 1`] = `
Object {
  "assignee": "matchai",
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @matchai",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`pull-request-merged-handler creates an issue and assigns the configured users 1`] = `
Object {
  "assignees": Array [
    "JasonEtco",
    "matchai",
    "defunkt",
  ],
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @JasonEtco, @matchai and @defunkt",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`pull-request-merged-handler creates an issue with a body line 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "Don&#x27;t forget about this body text!

---

https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @JasonEtco.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`pull-request-merged-handler creates an issue with a truncated title 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @JasonEtco.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "This is a really, really, really, really, really, really, really, really, really...",
}
`;

exports[`pull-request-merged-handler creates an issue without assigning anyone 1`] = `
Object {
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L10-L15

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "I am an example title",
}
`;

exports[`pull-request-merged-handler creates many (5) issues 1`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @JasonEtco.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 1",
}
`;

exports[`pull-request-merged-handler creates many (5) issues 2`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @JasonEtco.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 2",
}
`;

exports[`pull-request-merged-handler creates many (5) issues 3`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @JasonEtco.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 3",
}
`;

exports[`pull-request-merged-handler creates many (5) issues 4`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @JasonEtco.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 4",
}
`;

exports[`pull-request-merged-handler creates many (5) issues 5`] = `
Object {
  "assignee": "JasonEtco",
  "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/file.txt#L4

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff when #21 was merged. cc @JasonEtco.",
  "labels": Array [
    "todo :spiral_notepad:",
  ],
  "title": "Title number 5",
}
`;

exports[`pull-request-merged-handler reopens a closed issue 1`] = `
Object {
  "state": "open",
}
`;

exports[`pull-request-merged-handler reopens a closed issue 2`] = `
Object {
  "body": "This issue has been reopened because the **\`TODO\`** comment still exists in [**.travis.yml**](https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml), as of 6c2373ad036d292f7e9467981ba8b467e8b8b0ff.

---

###### If this was not intentional, just remove the comment from your code. You can also set the [\`reopenClosed\`](https://github.com/JasonEtco/todo#configuring-for-your-project) config if you don't want this to happen at all anymore.",
}
`;
